[tool.poetry]
name = "port-scanner"
version = "0.1.0"
description = ""
authors = ["Mark-Amgad-Selim <mark.amgad@thndr.app>"]
readme = "README.md"
packages = [{include = "port_scanner", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2.11.5,<3.0.0"
typer = ">=0.16.0,<0.17.0"
rich = ">=14.0.0,<15.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.4.0"

[tool.poetry.scripts]
port-scanner = "port_scanner.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
